2007-09-24  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gtk-doc.scm: Document the module, and reduce
	the number of exports to just two. Move around some definitions.
	(gtk-doc->texi-defuns): Rework to handle either the heuristics
	mode or g-wrap, and document.
	(gtk-doc->texi-stubs): Document.

	* doc/gobject/make-texinfo.scm: Add spaces between args to deal
	with fixed guile-lib serialization.

	* doc/glib/: 
	* doc/gobject/: GLib and GObject docs moved to separate
	directories.

2007-09-07  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gtk-doc.scm: Import gobject and goops so that
	we can do some runtime introspection of classes.
	(sdocbook-fold-structs): New function, folds over struct
	definitions.
	(signal-doc-name, signal-doc-docs, signal-refsect2-list)
	(signal-docs-alist, signal-stexi-args, class-signal-stexi-docs)
	(gobject-class-stexi-docs, gtk-doc-sdocbook->class-list/g-wrap):
	New functions to document classes, with their properties and
	signals.
	(gtk-doc->texi-defuns): Put class documentation before functions.

	* doc/section-*.texi: 
	* doc/defuns-*.texi: Regenerated.

	* gnome/gw/support/gtk-doc.scm (c-arguments->scheme-arguments)
	(function-stexi-arguments): Use @tie{} instead of a space where
	appropriate.
	(*gtk-doc-sdocbook->stexi-rules*): Translate FALSE and TRUE.
	(gtk-doc->texi-stubs): Put the subtitle in a subparagraph, not the
	title.
	(function-stexi-arguments): Don't wrap the var in @var, that makes
	it to be @tt font, which we don't want or need.
	(make-defs/g-wrap): Doc generics using @deffnx, not @deffn.

	* doc/Makefile.am: Factor out automatic g-wrap docs stuff into
	common makefile routines.

2007-09-02  Andy Wingo  <wingo@pobox.com>

	* doc/guile-gnome-glib.texi: New file, includes all the rest to
	make glib docs.

	* doc/Makefile.am: Add rules to regenerate guile-gnome-glib.texi's
	dependencies. Add guile-gnome-glib manual.

	* gnome/gw/support/gtk-doc.scm: Add a couple of public methods and